<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_Insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cake_blue"
    tools:context=".insertFragnment">

    <TextView
        android:id="@+id/tvNewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/tvNewContact"
        android:textColor="@color/dark_gray"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        android:tooltipText="@string/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewContact" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:hint="@string/etUserName"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etPhone"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etEmail"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_ingreso_datos"
        android:backgroundTint="@color/cake_blue"
        android:text="@string/btnInsert"
        android:theme="@style/Theme.QuerySQL.INSERT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMail"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/base_hielo_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />

</androidx.constraintlayout.widget.ConstraintLayout>